syntax = "proto3";
package proto;

option go_package = ".;proto";

import "google/api/annotations.proto";

message Profile {
  string username = 1;
  string bio = 2;
  string image = 3;
}

message User {
  string username = 1;
  string email = 2;
  string password = 3;
  string bio = 4;
  string image = 5;
}

message CreatedUser {
  string email = 1;
  string token = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
}

service Users {
  rpc ShowProfile (ShowProfileRequest) returns (ShowProfileResponse) {
    option (google.api.http) = {
      get: "/profiles/{username}"
    };
  }

  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "*"
    };
  }
}

message ShowProfileRequest {
  string username = 1;
}


message ShowProfileResponse {
  Profile profile = 1;
}


message CreateUserRequest {
  User user = 1;
}


message CreateUserResponse {
  CreatedUser user = 1;
}
